fix chatroom name not wrapping

--- a/app/assets/stylesheets/chatrooms.scss
+++ b/app/assets/stylesheets/chatrooms.scss
@@ -88,6 +88,8 @@
   display: flex;
   justify-content: center;
   align-self: center;
+  width: 100%;
+  overflow-x: scroll;
 }
 
 .chatroom_delete_button {
